k8s/apps/ingress-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-traffic
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-errors
            port:
              number: 80
      - path: /latency
        pathType: Prefix
        backend:
          service:
            name: api-latency
            port:
              number: 80
